# practice-kubernetes-with-terraform

./: README.md  Vagrantfile  watch.sh
.kube/: config
cluster/: calico-bgp.yaml  csi-smb.yaml  metric-server.yaml  script.sh  smb-sc.yaml
cluster-init/: init.sh  join.sh  master-init.sh  worker1-init.sh  worker2-init.sh  worker3-init.sh  worker4-init.sh
metric/: metric-server.yaml
node_scripts/: common.sh  join.sh  kubeadm-config.yaml  master.sh  vagrant-setting.yaml  worker.sh
pod/: failure-pod.yaml  multi-pod.yaml  readiness-gate.yaml  success-pod.yaml
pod/container/: ephemeral.yaml  init.yaml  sidecar.yaml
pod/probe/: liveness.yaml  readiness.yaml  startup.yaml  watch.sh
security/: audit.yaml  rbac.yaml
security/authentication/: ca.crt  confirm_user.py  test.py
security/keycloak/: keycloak-helm.yaml  sc.yaml
security/webhook_fastapi/: config.yaml  main.py  pyproject.toml
security/webhook_fastapi/pki/: ca.key  webhook.cnf  webhook.crt  webhook.csr  webhook.key  webhook.pub
storage/: intree-nfs.yaml  smb-csi-test.yaml
storage/experiment/: emptydir-memory-limit.yaml  mounting-another.yaml  retain.yaml
storage/nfs-csi-driver/: helm-nfs-csi.yaml  pvc.yaml  storage-class.yaml  test.yaml
storage/nfs-subdir-external/: nfs-subdir.yaml  pvc.yaml  test.yaml
storage/pv/: default.yaml  generic-ephemeral.yaml  only-pod.yaml  only-pv.yaml  only-pvc.yaml
svc/: default.yaml  multi-port.yaml
tf/: .terraform.lock.hcl  main.tf  outputs.tf  provider.tf  terraform.tfstate  variables.tf
workload/job/: indexed.yaml  (+2 more)
yml/: api-deployment.yml  database.yml
(+62 files in other folders)
